# agentforge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  railway.json  requirements.txt  start.sh
agents/: education_verification_call.yaml  employment_verification_call.yaml
docs/: ARCHITECTURE.md  GRAND_PLAN.md  PRASHANT_WORKFLOW_INSIGHTS.md  PRD.md  PRESENTATION_OUTLINE.md  PROGRESS.md  RUNBOOK.md  THREAT_MODEL.md  VAPI_SETUP.md  VERIFICATION_WORKFLOW_INSIGHTS.md
docs/ADR/: 001-async-fastapi.md  002-config-driven-state-machine.md  003-websockets-realtime.md  004-event-sourced-database.md  005-monorepo.md  README.md
frontend/: .env.development  .env.example  .env.production.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
prompts/: education_verification_call.md  employment_verification_call.md
scripts/: generate_encryption_key.py  make_call.py
src/: main.py
src/api/: agents.py  calls.py  dashboard.py  stats.py
src/config/: agent_config.py  loader.py  settings.py
src/database/: encryption.py  event_store.py
src/engine/: audit_logger.py  call_manager.py  compliance_validator.py  data_recorder.py  state_machine.py  summary_generator.py
src/middleware/: security.py
src/models/: call_session.py  events.py  (+1 more)
tests/: test_agent_config.py  test_api_calls.py  test_api_endpoints.py  test_data_recorder.py  test_evals.py  test_event_store.py  test_summary_generator.py  test_verification_record.py  test_webhook_handler.py
(+23 files in other folders)
